Сортировка елементов с null --> в конец